--- a/index.html
+++ b/index.html
@@ -223,8 +223,7 @@
     <div class="container-fluid py-5" id="about" style="background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-2 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Chi Sono</h1>
-                <h1 class="position-absolute text-uppercase text-primary">Chi Sono</h1>
+                <h1 class="text-uppercase text-primary">Chi Sono</h1>
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
@@ -251,7 +250,7 @@
                             <h6><i class="fa fa-calendar text-primary mr-2"></i>Compleanno: <span class="text-secondary">21/01/2003</span></h6>
                         </div>
                         <div class="col-sm-6 py-2">
-                            <h6><i class="fa fa-graduation-cap text-primary mr-2"></i>Laurea: <span class="text-secondary">Laurea Triennale (in corso)</span></h6>
+                            <h6><i class="fa fa-graduation-cap text-primary mr-2"></i>Laurea: <span class="text-secondary">Laurea Triennale Informatica (in corso)</span></h6>
                         </div>
                         <div class="col-sm-6 py-2">
                             <h6><i class="fa fa-briefcase text-primary mr-2"></i>Esperienza: <span class="text-secondary">Full Stack Developer</span></h6>
@@ -288,8 +287,7 @@
     <div class="container-fluid py-5" id="skill" style="background: linear-gradient(135deg, #ffffff 0%, #f8f9fa 100%);">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-2 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Competenze</h1>
-                <h1 class="position-absolute text-uppercase text-primary">Le Mie Competenze</h1>
+                <h1 class="text-uppercase text-primary">Le Mie Competenze</h1>
             </div>
             <div class="row align-items-center">
                 <div class="col-md-6">
@@ -306,21 +304,21 @@
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold"><i class="fas fa-database text-primary mr-2"></i>SQL</h6>
-                            <h6 class="font-weight-bold">90%</h6>
+                            <h6 class="font-weight-bold">85%</h6>
                         </div>
                         <div class="progress" style="height: 10px; border-radius: 5px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
                             <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="90" aria-valuemin="0"
-                                aria-valuemax="100" style="width: 90%; border-radius: 5px;"></div>
+                                aria-valuemax="100" style="width: 85%; border-radius: 5px;"></div>
                         </div>
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold"><i class="fas fa-mobile-alt text-info mr-2"></i>Flutter</h6>
-                            <h6 class="font-weight-bold">80%</h6>
+                            <h6 class="font-weight-bold">70%</h6>
                         </div>
                         <div class="progress" style="height: 10px; border-radius: 5px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
                             <div class="progress-bar bg-info" role="progressbar" aria-valuenow="80" aria-valuemin="0"
-                                aria-valuemax="100" style="width: 80%; border-radius: 5px;"></div>
+                                aria-valuemax="100" style="width: 70%; border-radius: 5px;"></div>
                         </div>
                     </div>
                 </div>
@@ -328,31 +326,31 @@
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold"><i class="fab fa-js-square text-warning mr-2"></i>JavaScript</h6>
-                            <h6 class="font-weight-bold">85%</h6>
+                            <h6 class="font-weight-bold">80%</h6>
                         </div>
                         <div class="progress" style="height: 10px; border-radius: 5px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
                             <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="85" aria-valuemin="0"
-                                aria-valuemax="100" style="width: 85%; border-radius: 5px;"></div>
+                                aria-valuemax="100" style="width: 80%; border-radius: 5px;"></div>
                         </div>
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold"><i class="fab fa-laravel text-dark mr-2"></i>Laravel</h6>
-                            <h6 class="font-weight-bold">85%</h6>
+                            <h6 class="font-weight-bold">90%</h6>
                         </div>
                         <div class="progress" style="height: 10px; border-radius: 5px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
                             <div class="progress-bar bg-dark" role="progressbar" aria-valuenow="85" aria-valuemin="0"
-                                aria-valuemax="100" style="width: 85%; border-radius: 5px;"></div>
+                                aria-valuemax="100" style="width: 90%; border-radius: 5px;"></div>
                         </div>
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold"><i class="fas fa-code text-primary mr-2"></i>TypeScript</h6>
-                            <h6 class="font-weight-bold">80%</h6>
+                            <h6 class="font-weight-bold">75%</h6>
                         </div>
                         <div class="progress" style="height: 10px; border-radius: 5px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
                             <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="80" aria-valuemin="0"
-                                aria-valuemax="100" style="width: 80%; border-radius: 5px;"></div>
+                                aria-valuemax="100" style="width: 75%; border-radius: 5px;"></div>
                         </div>
                     </div>
                 </div>
@@ -388,8 +386,7 @@
     <div class="container-fluid py-5" id="qualification" style="background: linear-gradient(135deg, #f2f8ff 0%, #e6f0ff 100%);">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-2 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Qualifiche</h1>
-                <h1 class="position-absolute text-uppercase text-primary">Formazione ed Esperienza</h1>
+                <h1 class="text-uppercase text-primary">Formazione ed Esperienza</h1>
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-6">
@@ -443,8 +440,7 @@
     <div class="container-fluid py-5" id="certifications" style="background: linear-gradient(135deg, #ffffff 0%, #f8f9fa 100%);">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-2 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Certificati</h1>
-                <h1 class="position-absolute text-uppercase text-primary">Certificazioni</h1>
+                <h1 class="text-uppercase text-primary">Certificazioni</h1>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-8 bg-white rounded shadow-sm p-4">
@@ -494,8 +490,7 @@
     <div class="container-fluid pt-5" id="service" style="background: linear-gradient(135deg, #f2f8ff 0%, #e6f0ff 100%);">
         <div class="container">
             <div class="service-h4 position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-2 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Servizi</h1>
-                <h1 class="position-absolute text-uppercase text-primary">I Miei Servizi</h1>
+                <h1 class="text-uppercase text-primary">I Miei Servizi</h1>
             </div>
             <div class="row pb-3">
                 <div class="row justify-content-center">
@@ -581,8 +576,7 @@
 <div class="container-fluid pt-5 pb-5" id="portfolio" style="background: linear-gradient(135deg, #ffffff 0%, #f8f9fa 100%); position: relative; z-index: 1; margin-bottom: 3rem;">
     <div class="container">
         <div class="position-relative d-flex align-items-center justify-content-center mb-5">
-            <h1 class="display-2 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Portfolio</h1>
-            <h1 class="position-absolute text-uppercase text-primary">I miei Progetti</h1>
+            <h1 class="text-uppercase text-primary">I miei Progetti</h1>
         </div>
         <div class="row portfolio-container">
             <div class="col-lg-6 col-md-6 mb-5 portfolio-item first">
